update footer logo to be positioned correctly on mobile

--- a/src/css/footerstyle.css
+++ b/src/css/footerstyle.css
@@ -11,6 +11,7 @@
 
 .footer-logo {
     height: 50%;
+    max-height: 90vw;
     margin-bottom: 5%;
     display: inline-block;
     position: relative;
